# Boat_detection

./: .gitignore  HowToBulild.txt  NN_boats.ipynb  NN_boats_2.ipynb  NN_boats_4_only_one_obj.ipynb  README.md
source/: CMakeLists.txt  detecting_boats.cpp  detecting_boats.h
